Changed margins on forms for adding the books, made them smaller vertically as I felt there was too much space between them. Fixed modal on Edit book where Cancel was not closing the modal.

--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -72,3 +72,14 @@ body {
     font-weight: 700;
   }
 
+div.formentry {
+margin-bottom: -20px;
+}
+
+div.submitbutton {
+  margin-top: 10px;
+}
+
+button.btn-large {
+  border-radius: 10px;
+}
